--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "db:init": "node scripts/init_db.js"
   },
   "keywords": [],
@@ -18,7 +18,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.16.0",
     "sequelize": "^6.37.7",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
